# merve

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DOCUMENTATION_UPDATES_PHASE6.md  Dockerfile.fraud  Dockerfile.sentiment  HIERARCHICAL_VERSIONING_FINAL_SUMMARY.md  KNOWN_ISSUES.md  LICENSE  Makefile  NEXT_TODOs.md  NOTICE  PHASE7_INTEGRATION_TEST_REPORT.md  README.md  TEST_IMPROVEMENT_BACKLOG.md  TEST_RESULTS_INTEGRATION.md  TEST_RESULTS_PHASE1_2.md  TEST_RESULTS_PHASE3.md  TEST_RESULTS_PHASE4.md  TEST_RESULTS_PHASE5.md  TEST_REVIEW_PHASE5.md  UPDATED_VERSIONING.md  WORKFLOW_VERSIONING.md  build_utils.py  docker-compose.monitoring.yml  global_config.yaml  llms.txt  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: INDEX.md  PROJECT_EVOLUTION.md  REFACTORING_PLAN_UX.md  TEST_SESSION_2_SUMMARY.md  agent-guide.md  ainit.md  api-reference.md  architecture.md  cli-reference.md  configuration.md  deployment.md  development.md  examples.md  migration-0.5.md  multi-classifier.md  observability.md
docs/archive/: KNOWN_ISSUES.md  README.md  REFACTORING_PLAN.md  TEST_FIXES_SUMMARY.md  api-standardization.md  metadata-implementation-todo.md  metadata-streamlining-plan.md
docs/rfcs/: 0001-design-decisions-and-sprint-plan.md  0002-agent-surface-sprint.md
examples/: README_EXAMPLES.md  load_test_demo.py  mlserver_complete.yaml  predictor_complex.py  test_complex_response.py
examples/example_titanic_manual_multi_classifier_setup/: mlserver_multi_classifier.yaml  predictor_catboost.py  predictor_randomforest.py  train_titanic_2_classifiers.py
examples/example_titanic_manual_setup/: Dockerfile  README.md  mlserver.yaml  mlserver_multi_classifier_simple.yaml  predictor_catboost.py  predictor_randomforest.py  requirements.txt  train_titanic.py  train_titanic_2_classifiers.py
examples/example_titanic_raw/: inference_example.ipynb  inference_example.py  train_titanic.py
mlserver/: __init__.py  _version_info.py  adapters.py  agents_md.py  auto_detect.py  cli.py  concurrency_limiter.py  config.py  container.py  defaults.py  doctor.py  errors.py  github_actions.py  init_project.py  logging_conf.py  metrics.py  multi_classifier.py  predictor.py  predictor_loader.py  schema_generator.py  schemas.py  server.py  settings.py  validation.py  version.py  version_control.py
mlserver/cli/: __init__.py  __main__.py  _app.py  build.py  project.py  serve.py  testing.py  versioning.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: mlserver-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
scripts/: check_docs_drift.py  coverage_metrics.py  fix_container_imports.py  refactor_container.py
tests/: INDEX.md  conftest.py
tests/fixtures/: __init__.py  concurrency_test_config.yaml  mock_classifier_repo.py  mock_predictor.py
tests/integration/: test_cli_v2_workflow.py  test_cli_workflow.py  test_complex_response_formats.py  test_concurrency_simplified.py  test_container_labels_versioning.py  test_hierarchical_versioning.py  test_observability.py  test_server_endpoints.py
tests/load/: locustfile.py
tests/unit/: test_adapters.py  test_agents_md.py  test_auto_detect.py  test_cli_basic.py  test_cli_commands.py  test_cli_coverage.py  test_cli_flags.py  test_cli_json_output.py  test_concurrency_limiter.py  test_config.py  test_config_extended.py  test_config_simplification.py  test_container.py  test_docs_drift.py  test_doctor.py  test_errors.py  test_github_actions.py  test_init_project.py  test_logging_conf.py  test_metrics.py  test_multi_classifier.py  test_path_resolution.py  test_predictor.py  test_predictor_loader.py  test_response_handling.py  test_schema_generator.py  test_server_unit.py  test_settings.py  test_validation.py  test_version.py  test_version_control.py
