
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mlserver-fastapi-wrapper"
dynamic = ["version"]
description = "Wrap any Python predictor class into a FastAPI inference API via a simple YAML config."
readme = "README.md"
authors = [{ name = "core64-lab" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/core64-lab/merve"
Repository = "https://github.com/core64-lab/merve"
Issues = "https://github.com/core64-lab/merve/issues"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "pydantic>=2.4",
  "pyyaml>=6.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.1",
  "catboost>=1.2",
  "prometheus-client>=0.20.0",
  "nbformat>=5.0",
  "httpx>=0.24",
  "typer>=0.17.4",
  "rich>=13.8.1",
  "semver>=3.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4.0",
  "httpx>=0.24",
  "respx>=0.20",
  "locust>=2.15"
]

build = [
  "docker>=6.0.0"
]

validation = [
  "docker>=6.0.0"
]

dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4.0",
  "httpx>=0.24",
  "respx>=0.20",
  "locust>=2.15",
  "docker>=6.0.0",
]

[project.scripts]
mlserver = "mlserver.cli:main"

[tool.setuptools.packages.find]
include = ["mlserver", "mlserver.*", "examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--cov=mlserver",
  "--cov-report=term-missing",
  "--cov-report=html:htmlcov",
  "--cov-report=json:coverage.json",
  "--cov-report=xml:coverage.xml",
  "--cov-branch",
  "--cov-fail-under=80",
  "-v"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["mlserver"]
omit = [
  "*/tests/*",
  "*/test_*",
  "*/__pycache__/*",
  "*/site-packages/*",
  "*/examples/*",
  "*/docs/*"
]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "pass",
  "except ImportError:"
]
show_missing = true
skip_covered = false
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"
title = "MLServer FastAPI Wrapper Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"

[tool.setuptools_scm]
# Configuration for setuptools-scm (dynamic versioning from git tags)
write_to = "mlserver/_version.py"
write_to_template = """# Auto-generated by setuptools-scm
# DO NOT EDIT - this file is automatically generated from git tags
__version__ = "{version}"
__version_tuple__ = {version_tuple}
"""
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"
