
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "merve"
dynamic = ["version"]
description = "Wrap any Python predictor class into a FastAPI inference API via a simple YAML config."
readme = "README.md"
authors = [{ name = "core64-lab" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "pydantic>=2.4",
  "pyyaml>=6.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "prometheus-client>=0.20.0",
  "httpx>=0.24",
  "typer>=0.17.4",
  "rich>=13.8.1",
  "semver>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/core64-lab/merve"
Repository = "https://github.com/core64-lab/merve"
Issues = "https://github.com/core64-lab/merve/issues"

[project.optional-dependencies]
ml = [
  "scikit-learn>=1.1",
  "catboost>=1.2",
]

test = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4.0",
  "httpx>=0.24",
  "respx>=0.20",
  "locust>=2.15",
  "scikit-learn>=1.1",
]

build = [
  "build>=1.0"
]

dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4.0",
  "httpx>=0.24",
  "respx>=0.20",
  "locust>=2.15",
  "scikit-learn>=1.1",
  "catboost>=1.2",
  "build>=1.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
merve = "mlserver.cli:main"
# Deprecated alias, kept for one transition release (RFC 0001 D9). The package
# collides with Seldon's `mlserver`; prefer the `merve` command.
mlserver = "mlserver.cli:main"

[tool.setuptools.packages.find]
include = ["mlserver", "mlserver.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--cov=mlserver",
  "--cov-report=term-missing",
  "--cov-report=html:htmlcov",
  "--cov-report=json:coverage.json",
  "--cov-report=xml:coverage.xml",
  "--cov-branch",
  "-v"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["mlserver"]
omit = [
  "*/tests/*",
  "*/test_*",
  "*/__pycache__/*",
  "*/site-packages/*",
  "*/examples/*",
  "*/docs/*"
]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "pass",
  "except ImportError:"
]
show_missing = true
skip_covered = false
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"
title = "MLServer FastAPI Wrapper Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = [
  ".venv",
  "build",
  "dist",
  "htmlcov",
  "docs",
  "examples/example_titanic_raw",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# B008: Typer's Option/Argument-in-default pattern is idiomatic and required.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Long assertion/data lines are fine in tests and examples.
"tests/**" = ["E501"]
"examples/**" = ["E501"]
# Embeds GitHub-workflow/README template strings; wrapping those lines would
# change the emitted files byte-for-byte.
"mlserver/github_actions.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mlserver"]

[tool.ruff.lint.pyupgrade]
# Pydantic/FastAPI/Typer evaluate annotations at runtime; `X | None` (PEP 604)
# would break on Python 3.9 (requires-python >=3.9). Keeps Optional[...] while
# still modernizing PEP 585 generics (list[...] is runtime-safe on 3.9).
keep-runtime-typing = true

[tool.mypy]
# Light mypy on mlserver/ (RFC 0001 D19): lenient flags, run via `make typecheck`.
# No python_version pin: numpy's stubs need a >=3.12 target; checking against
# the running interpreter keeps the signal without fighting the stubs.
packages = ["mlserver"]
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_ignores = true
exclude = '(^|/)(\.venv|build|dist|htmlcov|docs|examples)(/|$)'

[tool.setuptools_scm]
# Configuration for setuptools-scm (dynamic versioning from git tags)
write_to = "mlserver/_version.py"
write_to_template = """# Auto-generated by setuptools-scm
# DO NOT EDIT - this file is automatically generated from git tags
__version__ = "{version}"
__version_tuple__ = {version_tuple}
"""
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"
